--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -7,6 +7,6 @@
     <%= f.text_area :body %>
     <%= f.submit 'Update Book' %>
   <% end %>
-  <%= link_to "Show", show_book_path(@book.id) %>
-　<%= link_to "Back", back_book_path(@book.id) %>
+  <%= link_to "Show", book_path(@book.id)%>
+　<%= link_to "Back", "/books" %>
 </body>
