--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -3,4 +3,4 @@
 <h4>Body</h4>
 <p><%= @book.body %></p>
 <%= link_to "Edit", edit_book_path(@book.id) %>
-<%= link_to "Back", back_book_path(@book.id) %>
+<%= link_to "Back", "/books" %>
