[Fix]3-8 バリデーション（エラーメッセージの表示）

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,3 +1,10 @@
+<% if flash[:notice] %>
+  <div class="alert alert-primary" role="alert">
+    <%= notice %>
+  </div>
+<% end %>
+<p>
+<br>
 <h4>Title</h4>
 <p><%= @book.title %></p>
 <h4>Body</h4>
