--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,10 +1,24 @@
 <body>
   <h1>Editing Book</h1>
-  <%= form_with model:@book, local: true do |f| %>
+  <p>
+  <br>
+ <%= form_with model:@book, local: true do |f| %>
+   <% if @book.errors.any? %>
+   <div>
+    <div id="error_explanation">
+    <ul style = "color: red">
+     <%= @book.errors.count %>error prohibited this book from being saved:
+     <% @book.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+     <% end %>
+    </ul>
+   </div>
+   <% end %>
     <h4>Title</h4>
     <%= f.text_field :title %>
     <h4>Body</h4>
     <%= f.text_area :body %>
+    <br>
     <%= f.submit 'Update Book' %>
   <% end %>
   <%= link_to "Show", book_path(@book.id)%>
