--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -21,8 +21,20 @@
     </tbody>
    </table>
   <h2>New book</h2>
-   <!--ここにエラー文-->
+  <p>
+  <br>
   <%= form_with model:@book, local: true do |f| %>
+   <% if @book.errors.any? %>
+   <div>
+    <div id="error_explanation">
+    <ul style = "color: red">
+     <%= @book.errors.count %>error prohibited this book from being saved:
+     <% @book.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+     <% end %>
+    </ul>
+   </div>
+   <% end %>
   <h3>Title</h3>
    <%= f.text_field :title %>
   <h3>Body</h3>
