--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -4,24 +4,23 @@
   <br>
  <%= form_with model:@book, local: true do |f| %>
    <% if @book.errors.any? %>
-   <div>
     <div id="error_explanation">
-    <ul style = "color: red">
-     <%= @book.errors.count %>error prohibited this book from being saved:
-     <% @book.errors.full_messages.each do |message| %>
-      <li><%= message %></li>
-     <% end %>
-    </ul>
-   </div>
+     <h2><%= @book.errors.count %>error prohibited this book from being saved:</h2>
+      <ul>
+       <% @book.errors.full_messages.each do |message| %>
+       <li><%= message %></li>
+       <% end %>
+      </ul>
+    </div>
    <% end %>
-    <h4>Title</h4>
+    <h3>Title</h3>
     <%= f.text_field :title %>
-    <h4>Body</h4>
+    <h3>Body</h3>
     <%= f.text_area :body %>
     <br>
     <%= f.submit 'Update Book' %>
   <% end %>
-  
+  <br>
   <%= link_to "Show", book_path(@book.id)%>
 　<%= link_to "Back", "/books" %>
 </body>
