--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,13 +1,20 @@
-<% if flash[:notice] %>
-  <div class="alert alert-primary" role="alert">
-    <%= notice %>
-  </div>
-<% end %>
-<p>
-<br>
-<h4>Title</h4>
-<p><%= @book.title %></p>
-<h4>Body</h4>
-<p><%= @book.body %></p>
-<%= link_to "Edit", edit_book_path(@book.id) %>
-<%= link_to "Back", "/books" %>
+<body>
+ <% if flash[:notice] %>
+   <div class="alert alert-primary" role="alert">
+     <%= notice %>
+   </div>
+ <% end %>
+ <p>
+ <br>
+ <p>
+  <strong>Title</strong>
+  <%= @book.title %>
+ </p>
+ <p>
+  <strong>Body</trong>
+  <%= @book.body %>
+ </p>
+ <%= link_to "Edit", edit_book_path(@book.id) %>
+ |
+ <%= link_to "Back", "/books" %>
+</body>
